--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fluentui/react-components": "^9.54.0",
     "classnames": "^2.5.1",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
