--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.54.0",
+    "@fluentui/react-icons": "^2.0.242",
     "classnames": "^2.5.1",
     "open-props": "^1.7.4",
     "react": "^18.3.1",
